# rust-diagnostics

./: .gitignore  Cargo.toml  README.md  build.rs  count_diagnostics.sh
diagnostics/src/: main.rs
refactoring/: unwrap_used.txl
src/: language.rs  main.rs  main.rs.1  main.rs.diagnostics
transform/src/main/: 4200.2.rs  4200.3.rs  5692.2.rs  5692.3.rs  6387.2.rs  6387.3.rs  9328.2.rs  9328.3.rs
