[package]
name = "rust-diagnostics"
version = "0.1.7"
edition = "2021"
authors = [
    "Yijun Yu <y.yu@open.ac.uk>",
]
description = "A utility that embeds clippy diagnostics into Rust code."
repository = "https://github.com/yijunyu/rust-diagnostics"
documentation = "https://docs.rs/rust_diagnostics"
keywords = ["clippy", "diagnostics"]
license = "Apache-2.0"

[dependencies]
cargo = "0.66.0"
cargo_metadata = "0.15.1"
structopt = "0.3.26"
serde = { version = "1.0.133", features = [ "derive" ] }
git2 = { version = "0.15.0", optional = true }
tree-sitter-parsers = { version = "0.0.5", optional = true }
tree-sitter = { version = "0.20.9", optional = true}
anyhow = { version = "1.0.52", optional = true}
itertools = { version = "0.10.5", optional = true}
txl-rs = { version = "0.0.3", optional = true}
clap = { version = "3.2.23", optional = true}
reqwest = { version = "0.11.13", features = ["blocking"], optional = true }

[features]
default = ["patch"]
fix = [ "dep:tree-sitter", "dep:tree-sitter-parsers", "dep:anyhow", "dep:itertools", "dep:txl-rs", "dep:clap", "dep:reqwest" ]
rustc_flags = [ ]
patch = ["dep:git2"]

[build-dependencies]
cc = { version = "1.0.72", features = [ "parallel" ] }

[dev-dependencies]
insta = "1.24.1"
serial_test = "0.10.0"
